# physical-ai-humanoid-book

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  package-lock.json  package.json
.claude/debug/: 97cbceb5-9bbb-4137-a506-f82cff1ed1e1.txt  c0300f86-e604-4783-8393-86381b75b6d3.txt
.claude/plugins/: known_marketplaces.json
.claude/shell-snapshots/: snapshot-bash-1765920080791-vqx8cd.sh
.github/workflows/: backend_deploy.yml  frontend_deploy.yml
.specify/memory/: constitution.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/scripts/: ingest_vectors.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  ai.py  auth.py  content.py  personalization.py  translation.py
backend/src/config/: __init__.py  qdrant.py
backend/src/models/: __init__.py  content.py  content_metadata.py  user.py
backend/src/services/: __init__.py  ai_agent.py  auth_external.py  content_service.py  personalization_service.py  rag_service.py  translation_service.py  user_service.py
docs/: content_strategy.md  demo_script.md  performance_report.md
docs/presentation/: slides.md
e2e_tests/: example.spec.ts
frontend/: docusaurus.config.js  docusaurus.config.ts  fix-frontmatter.js  fix-markdown-frontmatter.ps1  fix-md-frontmatter.js  package-lock.json  package.json  sidebars.js  sidebars.ts
frontend-book/: package-lock.json
frontend/blog/: 2025-01-01-the-future-of-humanoid-robotics.md  2025-01-02-understanding-ros-2.md  2025-01-03-digital-twins-in-robotics.md  2025-01-04-vision-language-action-systems.md  (+1 more)
scripts/: generate_content_structure.py
(+61 files in other folders)
